[package]
name = "proc_getter"
version = "0.0.3"
authors = ["pearzl <302669696@qq.com>"]
edition = "2018"

license = "MIT"
description = "make retriving infomations from /proc/* easier"
readme = "README.md"
keywords = ["proc", "linux", "info", "sys"]
repository = "https://github.com/pearzl/proc_getter"
documentation = "https://docs.rs/crate/proc_getter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
